@@ -1,0 +1,2 @@
+Tests the way incorrect chemical formulae are handled with the
+--parse-formula option is enabled.
