@@ -4,6 +4,10 @@ cod-tools (unreleased)
     - cif_validate:
       - updating the dictionary building logic to take default DDL1 values into
         account.
+  * Fixed:
+    - COD::Formulae::Parser::AdHoc:
+      - updated the error handling logic to raise the warn signal instead
+        of printing directly to STDERR.
 
 cod-tools (2.3)
 
